force-app/main/default/objects/Fuel_store__c/Fuel_store__c.object-meta.xml
<CustomObject>
    <label>Fuel store</label>
    <nameField>
        <displayFormat>Entry-{0000}</displayFormat>
        <label>Entry no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fuel stores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>