force-app/main/default/objects/Fuel_store__c/fields/Available_Petrol__c.field-meta.xml
<CustomField>
    <fullName>Available_Petrol__c</fullName>
    <formula>net_quantity1__c   - (   total_purchase1__c +  total_purchase2__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Petrol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>