force-app/main/default/objects/Fuel_store__c/fields/BankMaster_Store__c.field-meta.xml
<CustomField>
    <fullName>BankMaster_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BankMaster_Store</label>
    <referenceTo>BankMaster__c</referenceTo>
    <relationshipLabel>Fuel stores</relationshipLabel>
    <relationshipName>Fuel_stores</relationshipName>
    <type>Lookup</type>
</CustomField>