force-app/main/default/objects/Fuel_store__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <label>count</label>
    <summaryForeignKey>Fule_sale_trans__c.chalanno__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>