force-app/main/default/objects/Fuel_store__c/fields/Employeeno__c.field-meta.xml
<CustomField>
    <fullName>Employeeno__c</fullName>
    <label>Employeeno</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Fuel stores</relationshipLabel>
    <relationshipName>Fuel_stores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>