force-app/main/default/objects/Fuel_store__c/fields/net_quantity1__c.field-meta.xml
<CustomField>
    <fullName>net_quantity1__c</fullName>
    <formula>Employeeno__r.total_arrival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>net quantity1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>