force-app/main/default/objects/Fuel_store__c/fields/netamountsum__c.field-meta.xml
<CustomField>
    <fullName>netamountsum__c</fullName>
    <label>netamountsum</label>
    <summarizedField>Fule_sale_trans__c.Net_amount__c</summarizedField>
    <summaryForeignKey>Fule_sale_trans__c.chalanno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>