force-app/main/default/objects/Fuel_store__c/fields/New_arrival__c.field-meta.xml
<CustomField>
    <fullName>New_arrival__c</fullName>
    <label>New arrival</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>