force-app/main/default/objects/Fuel_store__c/fields/total_purchase1__c.field-meta.xml
<CustomField>
    <fullName>total_purchase1__c</fullName>
    <label>total purchase1</label>
    <summarizedField>Fule_sale_trans__c.Purchase_in_ltr__c</summarizedField>
    <summaryForeignKey>Fule_sale_trans__c.chalanno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>