force-app/main/default/objects/Fuel_store__c/fields/total_purchase2__c.field-meta.xml
<CustomField>
    <fullName>total_purchase2__c</fullName>
    <formula>netamountsum__c  /  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total purchase2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>